update attribute form

--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -12,6 +12,10 @@
         <dd><input type="submit" value="Send">
       </dl>
     </form>
+
+    <form><input type="checkbox" name="first name" value="gname"/>First Name<br/>
+      <input type="submit" value="send">
+    </form>
   {% endif %}
   <ul class="entries">
   {% for entry in entries %}
