--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -13,7 +13,8 @@
       </dl>
     </form>
 
-    <form><input type="checkbox" name="first name" value="gname"/>First Name<br/>
+    <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
+      <input type="checkbox" name="first name" value="gname"/>First Name<br/>
       <input type="submit" value="send">
     </form>
   {% endif %}
