--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -39,7 +39,7 @@
       <input type="checkbox" name="marital-status" value="marriage"/>Marital Status<br/>
       <input type="submit" value="send"> 
     </form>
-    <form action="/original_out" method="get" class="add-entry">
+    <form action="{{ url_for('new_corrupt') }}" method="get" class="add-entry">
       <input type="submit" value="synthesize"/>
     </form>
     
