--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -1,27 +1,19 @@
 {% extends "layout.html" %}
 {% block body %}
   {% if session.logged_in %}
-    <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
-      <dl>
-        <dt>First Name:
-        <dd><input type="text" size="30" name="name_first">
-        <dt>Last Name:
-        <dd><input type="text" size="30" name="name_last">
-        <dt>Gender:
-        <dd><input type="text" size="30" name="gender">
-        <dd><input type="submit" value="Send">
-      </dl>
-    </form>
 
     <form action="/add" method="post" class="add-entry">
-      <input type="checkbox" name="given name" value="gname"/>First Name<br/>
+      <p><u>Attributes Selection</u></p>
+      <p>Check the attributes to be generated. Required fields are marked with asterisk.</p>
+      <input type="checkbox" name="given-name" value="gname"/>Given Name*<br/>
+      <input type="checkbox" name="surname" value="sname"/>Surname*<br/>
+      <input type="checkbox" name="gender" value="gender"/>Gender*<br/>
+      <input type="checkbox" name="DOB" value="DOB"/>DOB*<br/>
       <input type="checkbox" name="middle name" value="mname"/>Middle Name<br/>
-      <input type="checkbox" name="surname" value="sname"/>Family Name<br/>
-      <input type="checkbox" name="nameprefix" value="name_prefix"/>Prefix<br/>
-      <input type="checkbox" name="previous name" value="previous-surname"/>Previous Family Name<br/>
-      <input type="checkbox" name="nickname" value="nickname"/>Nickname<br/>
+      <input type="checkbox" name="name-prefix" value="name_prefix"/>Prefix<br/>
+      <input type="checkbox" name="name-suffix" value="name_suffix"/>Suffix<br/>
+      <input type="checkbox" name="previous name" value="previous-surname"/>Previous Surname<br/>
       <input type="checkbox" name="age" value="new_age"/>Age<br/>
-      <input type="checkbox" name="gender" value="gender"/>Gender<br/>
       <input type="checkbox" name="address" value="street-address"/>Street Address<br/>
       <input type="checkbox" name="city" value="city"/>City<br/>
       <input type="checkbox" name="state" value="state"/>State<br/>
@@ -32,13 +24,22 @@
       <input type="checkbox" name="credit-card-number" value="credit_card"/>Credit Card Number<br/>
       <input type="checkbox" name="social-security-number" value="social_security"/>Social Security Number<br/>
       <input type="checkbox" name="passport-number" value="passport"/>Passport Number<br/>
-      <input type="checkbox" name="mother-maiden-name" value="mother"/>Mother's Madien Name<br/>
+      <input type="checkbox" name="mother-maiden-name" value="mother"/>Mother's Maiden Name<br/>
       <input type="checkbox" name="email" value="email"/>Email<br/>
-      <input type="checkbox" name="DOB" value="DOB"/>DOB<br/>
       <input type="checkbox" name="race_hispanic" value="race_hispanic"/>Race/Hispanic<br/>
       <input type="checkbox" name="marital-status" value="marriage"/>Marital Status<br/>
+      <p><u>Generation Requirements</u></p>
+      Number of Records to Generate: <input type="text" name="NumGen" value="1000" size="1"><br>
+      <p><u>Corruption Requirements</u></p>
+      Number of Records to Duplicates: <input type="text" name="NumDup" value="100" size="1"><br>
+      Maximum number of duplicates per record: <input type="text" name="MaxDup" value="2" size="1"><br>
+      Maximum modifications per attribute: <input type="text" name="MaxMod_Attr" value="2" size="1"><br>
+      Maximum modifications per record: <input type="text" name="MaxMod_Rec" value="2" size="1"><br>
       <input type="submit" value="send"> 
     </form>
+
+    
+
     <form action="{{ url_for('new_corrupt') }}" method="get" class="add-entry">
       <input type="submit" value="synthesize"/>
     </form>
