--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -5,15 +5,14 @@
     <form action="{{ url_for('select_attr') }}" method="post" class="add-entry">
       <p><u>Attributes Selection</u></p>
       <p>Check the attributes to be generated. Required fields are marked with asterisk.</p>
-      <input type="checkbox" name="given-name" value="gname"/>Given Name*<br/>
-      <input type="checkbox" name="surname" value="sname"/>Surname*<br/>
-      <input type="checkbox" name="gender" value="gender"/>Gender*<br/>
-      <input type="checkbox" name="DOB" value="DOB"/>DOB*<br/>
+      <input type="hidden" name="given-name" value="gname"/>Given Name*<br/>
+      <input type="hidden" name="surname" value="sname"/>Surname*<br/>
+      <input type="hidden" name="gender" value="gender"/>Gender*<br/>
+      <input type="hidden" name="age" value="new_age"/>Age<br/>
       <input type="checkbox" name="middle name" value="mname"/>Middle Name<br/>
       <input type="checkbox" name="name-prefix" value="name_prefix"/>Prefix<br/>
       <input type="checkbox" name="name-suffix" value="name_suffix"/>Suffix<br/>
       <input type="checkbox" name="previous name" value="sname_prev"/>Previous Surname<br/>
-      <input type="checkbox" name="age" value="new_age"/>Age<br/>
       <input type="checkbox" name="address" value="address"/>Street Address<br/>
       <input type="checkbox" name="city" value="city"/>City<br/>
       <input type="checkbox" name="state" value="state"/>State<br/>
@@ -26,8 +25,7 @@
       <input type="checkbox" name="passport-number" value="passport"/>Passport Number<br/>
       <input type="checkbox" name="mother-maiden-name" value="mother"/>Mother's Maiden Name<br/>
       <input type="checkbox" name="email" value="email"/>Email<br/>
-      <input type="checkbox" name="race_hispanic" value="race_hispanic"/>Race/Hispanic<br/>
-      <input type="checkbox" name="marital-status" value="marriage"/>Marital Status<br/>
+      
       <p><u>Generation Requirements</u></p>
       Number of Records to Generate: <input type="text" name="NumGen" value="100" size="4"><br>
       <p><u>Corruption Requirements</u></p>
